Implemented Orchestrator, Connected it to Frontend. Created Store has Default Item, Store and Checkout

--- a/server/.env.example
+++ b/server/.env.example
@@ -14,3 +14,15 @@ SECRET_KEY=your-secret-key-here
 DEBUG=True
 HOST=0.0.0.0
 PORT=8000
+
+# Store URL configuration
+# Example local (with port-forward): STORE_BASE_DOMAIN=localhost, STORE_BASE_PORT=8080
+# Example production: STORE_BASE_DOMAIN=stores.example.com, STORE_BASE_PORT=
+STORE_BASE_DOMAIN=localhost
+STORE_BASE_PORT=8080
+
+# Helm values selection
+# Set APP_ENV=production to automatically use values-prod.yaml
+# Or set STORE_VALUES_FILE to an absolute path for a custom values file
+APP_ENV=development
+STORE_VALUES_FILE=
