Added Type Erasure and Adapter for Other types of Stores

--- a/charts/store/values-local.yaml
+++ b/charts/store/values-local.yaml
@@ -1,5 +1,5 @@
 store:
-  host: "{{ .Release.Namespace }}.127.0.0.1.nip.io"
+  host: "{{ .Release.Namespace }}.localhost"
 
 storageClass: hostpath
 
