Modified Codebase for Deployement

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,12 +1,12 @@
 # Environment variables
 # MongoDB Atlas Configuration - Single cluster for entire project
-MONGODB_URI=mongodb+srv://<username>:<password>@<cluster>.xxxxx.mongodb.net/?retryWrites=true&w=majority
+# IMPORTANT: Add ?tlsAllowInvalidCertificates=true if facing SSL issues on Windows
+MONGODB_URI=mongodb+srv://<username>:<password>@<cluster>.xxxxx.mongodb.net/?retryWrites=true&w=majority&tlsAllowInvalidCertificates=true
 MONGODB_DB=store_platform
 
-# Future authentication settings (when auth is added)
-JWT_SECRET=your-jwt-secret-key-here
-JWT_ALGORITHM=HS256
-JWT_EXPIRE_MINUTES=30
+# Authentication settings
+# Generate a secure random key: python -c "import secrets; print(secrets.token_urlsafe(32))"
+JWT_SECRET_KEY=your-jwt-secret-key-change-in-production-use-random-string
 
 # Legacy settings (can be removed)
 DATABASE_URL=sqlite:///./test.db
