--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,9 +1,15 @@
-fastapi>=0.100.0
-uvicorn[standard]>=0.23.0
-pydantic>=2.4.0
-pydantic[email]>=2.4.0
-python-multipart>=0.0.5
-python-dotenv>=0.19.0
-motor>=3.3.0
-pymongo>=4.6.0
-PyYAML>=6.0
+fastapi==0.115.0
+uvicorn[standard]==0.31.0
+pydantic==2.9.2
+pydantic[email]==2.9.2
+python-multipart==0.0.12
+python-dotenv==1.0.1
+motor==3.6.0
+pymongo==4.10.1
+PyYAML==6.0.2
+passlib==1.7.4
+bcrypt==4.0.1
+python-jose[cryptography]==3.3.0
+certifi==2024.8.30
+slowapi==0.1.9
+httpx==0.27.0
