--- a/.github/workflows/deploy-orchestrator-eks.yml
+++ b/.github/workflows/deploy-orchestrator-eks.yml
@@ -18,6 +18,8 @@ env:
   EKS_NODEGROUP_NAME: ${{ secrets.EKS_NODEGROUP_NAME }}
   EKS_NODE_INSTANCE_TYPE: ${{ secrets.EKS_NODE_INSTANCE_TYPE }}
   EKS_NODE_COUNT: ${{ secrets.EKS_NODE_COUNT }}
+  EKS_AZ: ${{ secrets.EKS_AZ }}
+  ORCHESTRATOR_SECRET_FORCE_SYNC: ${{ secrets.ORCHESTRATOR_SECRET_FORCE_SYNC }}
 
 jobs:
   deploy:
@@ -57,13 +59,14 @@ jobs:
           CLUSTER_NAME="$EKS_CLUSTER_NAME"
           REGION="$AWS_REGION"
           NODEGROUP_NAME="${EKS_NODEGROUP_NAME:-orchestrator-ng}"
-          NODE_COUNT="${EKS_NODE_COUNT:-2}"
-          NODE_INSTANCE_TYPE="${EKS_NODE_INSTANCE_TYPE:-t3.medium}"
+          NODE_COUNT="${EKS_NODE_COUNT:-1}"
+          NODE_INSTANCE_TYPE="${EKS_NODE_INSTANCE_TYPE:-t3.small}"
+          ZONE="${EKS_AZ:-${REGION}a}"
 
           if aws eks describe-cluster --name "$CLUSTER_NAME" --region "$REGION" >/dev/null 2>&1; then
             echo "EKS cluster exists: $CLUSTER_NAME"
           else
-            echo "Creating EKS cluster: $CLUSTER_NAME"
+            echo "Creating MVP EKS cluster: $CLUSTER_NAME (zone=$ZONE, nodeType=$NODE_INSTANCE_TYPE, nodes=$NODE_COUNT)"
             eksctl create cluster \
               --name "$CLUSTER_NAME" \
               --region "$REGION" \
@@ -71,6 +74,7 @@ jobs:
               --nodegroup-name "$NODEGROUP_NAME" \
               --nodes "$NODE_COUNT" \
               --node-type "$NODE_INSTANCE_TYPE" \
+              --zones "$ZONE" \
               --with-oidc
           fi
 
@@ -79,8 +83,9 @@ jobs:
           CLUSTER_NAME="$EKS_CLUSTER_NAME"
           REGION="$AWS_REGION"
           NODEGROUP_NAME="${EKS_NODEGROUP_NAME:-orchestrator-ng}"
-          NODE_COUNT="${EKS_NODE_COUNT:-2}"
-          NODE_INSTANCE_TYPE="${EKS_NODE_INSTANCE_TYPE:-t3.medium}"
+          NODE_COUNT="${EKS_NODE_COUNT:-1}"
+          NODE_INSTANCE_TYPE="${EKS_NODE_INSTANCE_TYPE:-t3.small}"
+          ZONE="${EKS_AZ:-${REGION}a}"
 
           if aws eks describe-nodegroup --cluster-name "$CLUSTER_NAME" --nodegroup-name "$NODEGROUP_NAME" --region "$REGION" >/dev/null 2>&1; then
             echo "EKS nodegroup exists: $NODEGROUP_NAME"
@@ -92,7 +97,10 @@ jobs:
               --name "$NODEGROUP_NAME" \
               --managed \
               --nodes "$NODE_COUNT" \
-              --node-type "$NODE_INSTANCE_TYPE"
+              --nodes-min "$NODE_COUNT" \
+              --nodes-max "$NODE_COUNT" \
+              --node-type "$NODE_INSTANCE_TYPE" \
+              --zones "$ZONE"
           fi
 
       - name: Ensure ECR repository exists
@@ -138,15 +146,35 @@ jobs:
         run: |
           kubectl create namespace orchestrator-system --dry-run=client -o yaml | kubectl apply -f -
 
-          kubectl -n orchestrator-system create secret generic orchestrator-config \
-            --from-literal=BACKEND_API_BASE="${BACKEND_API_BASE}" \
-            --from-literal=ORCHESTRATOR_TOKEN="${ORCHESTRATOR_TOKEN}" \
-            --from-literal=ORCH_POLL_ATTEMPTS="${ORCH_POLL_ATTEMPTS:-30}" \
-            --from-literal=ORCH_POLL_INTERVAL="${ORCH_POLL_INTERVAL:-10}" \
-            --from-literal=ORCH_MOCK="${ORCH_MOCK:-0}" \
-            --from-literal=APP_ENV="${APP_ENV:-production}" \
-            --from-literal=STORE_VALUES_FILE="${STORE_VALUES_FILE}" \
-            --dry-run=client -o yaml | kubectl apply -f -
+          FORCE_SYNC="${ORCHESTRATOR_SECRET_FORCE_SYNC:-0}"
+
+          if kubectl -n orchestrator-system get secret orchestrator-config >/dev/null 2>&1; then
+            if [[ "$FORCE_SYNC" == "1" ]]; then
+              echo "FORCE_SYNC enabled: syncing orchestrator-config secret from GitHub secrets"
+              kubectl -n orchestrator-system create secret generic orchestrator-config \
+                --from-literal=BACKEND_API_BASE="${BACKEND_API_BASE:-http://placeholder.local/api}" \
+                --from-literal=ORCHESTRATOR_TOKEN="${ORCHESTRATOR_TOKEN:-change-me}" \
+                --from-literal=ORCH_POLL_ATTEMPTS="${ORCH_POLL_ATTEMPTS:-30}" \
+                --from-literal=ORCH_POLL_INTERVAL="${ORCH_POLL_INTERVAL:-10}" \
+                --from-literal=ORCH_MOCK="${ORCH_MOCK:-1}" \
+                --from-literal=APP_ENV="${APP_ENV:-production}" \
+                --from-literal=STORE_VALUES_FILE="${STORE_VALUES_FILE}" \
+                --dry-run=client -o yaml | kubectl apply -f -
+            else
+              echo "orchestrator-config already exists; preserving current EKS-managed values (Option B)"
+            fi
+          else
+            echo "orchestrator-config not found; creating initial secret"
+            kubectl -n orchestrator-system create secret generic orchestrator-config \
+              --from-literal=BACKEND_API_BASE="${BACKEND_API_BASE:-http://placeholder.local/api}" \
+              --from-literal=ORCHESTRATOR_TOKEN="${ORCHESTRATOR_TOKEN:-change-me}" \
+              --from-literal=ORCH_POLL_ATTEMPTS="${ORCH_POLL_ATTEMPTS:-30}" \
+              --from-literal=ORCH_POLL_INTERVAL="${ORCH_POLL_INTERVAL:-10}" \
+              --from-literal=ORCH_MOCK="${ORCH_MOCK:-1}" \
+              --from-literal=APP_ENV="${APP_ENV:-production}" \
+              --from-literal=STORE_VALUES_FILE="${STORE_VALUES_FILE}" \
+              --dry-run=client -o yaml | kubectl apply -f -
+          fi
 
       - name: Deploy orchestrator to EKS
         run: |
